[gd_scene load_steps=13 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Test Assets/_down idle.png" type="Texture" id=2]
[ext_resource path="res://Assets/Test Assets/spr_placeholder_dialogue.png" type="Texture" id=3]
[ext_resource path="res://scenes/City/3DNPCs/3DNPC.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=3]
flags = 23
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 23
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 23
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 23
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 23
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "tidle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "widle",
"speed": 5.0
} ]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.153988, 0.22258, 0.195449 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.153988, 0.22258, 0.195449 )

[node name="Spatial" type="KinematicBody" groups=["goodPeople"]]
script = ExtResource( 4 )

[node name="Sprite3D" type="AnimatedSprite3D" parent="."]
modulate = Color( 0, 1, 0.25098, 1 )
billboard = 1
frames = SubResource( 1 )
animation = "tidle"

[node name="InteractNotice" type="Sprite3D" parent="."]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0.127, -0.205 )
visible = false
billboard = 1
texture = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.504274, 0, 0, 0, 0.504274, 0, 0, 0, 0.504274, 0, 0, 0 )
shape = SubResource( 2 )

[node name="NPCArea" type="Area" parent="."]

[node name="CollisionShape2" type="CollisionShape" parent="NPCArea"]
transform = Transform( 0.916146, 0, 0, 0, 0.916146, 0, 0, 0, 0.916146, 0, 0, 0 )
shape = SubResource( 8 )

[node name="NavigationAgent" type="NavigationAgent" parent="."]
avoidance_enabled = true
radius = 0.1
neighbor_dist = 0.1
max_neighbors = 1

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
autostart = true

[connection signal="body_entered" from="NPCArea" to="." method="_on_NPCArea_body_entered"]
[connection signal="body_exited" from="NPCArea" to="." method="_on_NPCArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
